<resources>

    <!-- STRINGS NAVIGATION -->


    <string name="app_name">FreeNomo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- STRINGS GENERALES-->
    <string name="signIn">Iniciar sesion</string>
    <string name="email">Correo electrónico</string>
    <string name="phoneNumber">Telefono</string>
    <string name="password">Contraseña</string>
    <string name="repeatPassword">Repetir contraseña</string>
    <string name="offerTitle">Titulo de la oferta</string>

    <!-- STRINGS LOGIN -->
    <string name="textViewBienvenido">¡Bienvenido!</string>
    <string name="textViewContinuar">Inicia sesión para continuar</string>
    <string name="textInputCorreo">Correo Electronico</string>
    <string name="textInputContraseña">Contraseña</string>
    <string name="btnIniciarSesion">INICIAR SESIÓN</string>
    <string name="btnNoCuenta">¿No tienes cuenta? Regístrate</string>
    <string name="btnNoCancelar">Cancelar</string>

    <!-- STRINGS REGISTRAR -->
    <string name="textViewRegistrate">Regístrate</string>
    <string name="textViewRegistrar">Regístrate y/o publica/encuentra las mejores ofertas</string>
    <string name="textInputNombreCompleto">Nombre completo</string>
    <string name="textInputContraseñaRegistro">Contraseña</string>
    <string name="textInputRepiteContraseña">Repetir contraseña</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="btnTienesCuenta">¿Ya tienes una cuenta? Inicia sesión</string>
    <string name="textInputTelefono">Telefono</string>

    <!-- STRINGS MODIFICAR USUARIO -->
    <string name="cambiarNombre">Cambiar nombre</string>
    <string name="cambiarCorreo">Cambiar correo</string>
    <string name="cambiarContraseña">Cambiar contraseña</string>
    <string name="eliminarCuenta">Eliminar cuenta</string>
    <string name="textMofifica">Modifica tus datos</string>
    <string name="cambiarTelefono">Cambiar teléfono</string>

    <!-- STRINGS CREAR POST -->
    <string name="tituloPage">¡Crea tu oferta!</string>
    <string name="miniTituloPage">Bienvenido al apartado crear ofertas, aquí podrás dar aconocer tus habilidades y que la gente contacte contigo.</string>
    <string name="tituloPost">Título de la oferta</string>
    <string name="descripcionPost">Descripción de la oferta</string>
    <string name="fotoPost">Título de la oferta</string>
    <string name="precioPost">Precio por tus servicios</string>
    <string name="telefonoPost">Número de contacto</string>
    <string name="obligatorio">Obligatorio*</string>

    <!-- STRING ALERTAS -->
    <string name="contraActual">Contraseña actual</string>
    <string name="contraNueva">Contraseña nueva</string>
    <string name="repeContraNueva">Repetir contraseña</string>
    <string name="nombreNuevo">Nombre y apellidos</string>
    <string name="correoNuevo">Correo electrónico</string>
    <string name="teleNuevo">Telefono</string>

    <!-- MENU -->
    <string name="home">Principal</string>
    <string name="crear">Crear</string>
    <string name="buscar">Buscar</string>
    <string name="chat">Chat</string>
    <string name="ajustes">Ajustes</string>

    <!-- CHAT -->
    <string name="noChats">No hay chats</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="hora">Hora</string>

    <!-- POST ITEM -->
    <string name="categoria">Categoría</string>
    <string name="publicada">Publicada</string>
    <string name="descripcion">Descripción:</string>
    <string name="abrirChat">¡ABRIR CHAT!</string>

    <!-- Preference Titles -->
    <string name="general">General</string>
    <string name="cuenta">Cuenta</string>

    <!-- Preference General -->
    <string name="idioma">Idioma</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="ayuda">Ayuda</string>
    <string name="moneda">Moneda</string>

    <!-- Preference Cuenta -->
    <string name="mi_cuenta">Mi cuenta</string>
    <string name="cerrar_sesion">Cerrar sesion</string>

    <!-- STRING Home -->
    <string name="buscarHome">Introduzca el texto a buscar</string>

    <!-- String categorias -->
    <string name="categorias">Seleccione una categoría </string>

    <!-- STRING NUEVAS ALERTAS -->
    <string name="cambioExitoso">Cambio exitoso</string>
    <string name="cambioTelefono">¡Tu teléfono se a modificado correctamente!</string>
    <string name="cambioCorreo">¡Tu correo se a modificado correctamente!</string>
    <string name="cambioNombre">¡Tu nombre se a modificado correctamente!</string>
    <string name="cambioContrasena">¡Tu contraseña se a modificado correctamente!</string>
    <string name="cambioBorrarCuenta">¡Tu cuenta se a eliminado correctamente!</string>
    <string name="datoIncorrecto">¡Has introducido algún dato incorrecto, intentalo de nuevo!</string>
    <string name="datoMalInsertado">¡Algo no ha ido bien!</string>
    <string name="btnConfirmarAlertas">Confirmar</string>

    <!-- CAMBIAR DATOS USUARIO -->
    <string name="recuerda">Recuerda poner tu nombre y apellidos completos para poder cambiar tu nombre a la vista de los demás.</string>
    <string name="cambiarCorreoElectronico">Cambiar el correo electronico.</string>
    <string name="numTelefono">Introduce tu número de teléfono.</string>
    <string name="contraseña">"Introduce tu contraseña dos veces para asegurarnos que eres el propietario de esta cuenta."</string>
    <string name="cambiar">Cambiar ahora</string>
    <string name="seguro">"¿Estás seguro de que quieres borrar la cuenta? Una vez borrada no podrás volver a acceder a ella."</string>
    <string name="camposVacios">Porfavor no deje campos vacíos</string>
    <string name="rellena">Porfavor rellena todos los campos</string>
    <string name="borrar">Borrar cuenta</string>


</resources>