<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainBackground">

    <PreferenceCategory app:title="@string/general">

        <ListPreference
            app:defaultValue="castellano"
            app:entries="@array/idioma_entradas"
            app:entryValues="@array/idioma_valores"
            app:key="idioma"
            app:title="@string/idioma"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="modoOscuro"
            app:title="@string/modo_oscuro" />

        <ListPreference
            app:defaultValue="EUR"
            app:entries="@array/moneda_entradas"
            app:entryValues="@array/moneda_valores"
            app:key="EUR"
            app:title="Moneda"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="Ayuda"
            app:title="@string/ayuda" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/cuenta">
        <Preference
            app:key="miCuenta"
            app:title="@string/mi_cuenta"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:key="cerrarSesion"
            app:title="@string/cerrar_sesion" />
    </PreferenceCategory>

</PreferenceScreen>