<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/contrasenaA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/contraActual"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/contrasenaN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/contraNueva"
        android:inputType="textPassword"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/contrasenaNR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/repeContraNueva"
        android:inputType="textPassword"
        android:layout_marginTop="100dp" />
</RelativeLayout>