<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="25dp"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/registroLogo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_marginTop="25dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/textViewRegistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistrar"
        android:layout_marginTop="1dp"
        android:textSize="40dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewRegistrar"
        android:textSize="16dp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textInputNombreCompleto"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/correoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textInputCorreo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/telefonoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textInputTelefono"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contraUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textInputContraseñaRegistro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repetirContraUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textInputRepiteContraseña"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registrarBoton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRegistrar"
            android:padding="12dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp" />
        <TextView
            android:id="@+id/textViewInicioSesion"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:clickable="true"
            android:text="@string/btnTienesCuenta" />
    </LinearLayout>

</LinearLayout>